Add global NOW variable for template, and use the build date's year for copyright notice.

--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -64,10 +64,10 @@
           data-link-name="guidelines">{{ _('Participation Guidelines') }}</a>
       </div>
       <p>
-        {%trans%}
+        {% trans trimmed current_year=NOW.year %}
         <small>
           Thunderbird is part of <a href="https://blog.thunderbird.net/2020/01/thunderbirds-new-home/">MZLA Technologies Corporation</a>, a wholly owned subsidiary of Mozilla Foundation.
-          Portions of this content are ©1998–2023 by individual contributors. Content available under a
+          Portions of this content are ©1998–{{ current_year }} by individual contributors. Content available under a
           <a href="https://www.mozilla.org/foundation/licensing/website-content/">Creative Commons license</a>.
         </small>
         {% endtrans %}
