Add some padding to the bottom of download

--- a/assets/less/pages/download.less
+++ b/assets/less/pages/download.less
@@ -9,6 +9,11 @@
 }
 
 .page-download {
+  // Need a little extra padding here
+  .container {
+    padding-bottom: 150px;
+  }
+
   .accordion {
     cursor: pointer;
     margin-top: 1rem;
