Fix "Specific installer" animation jitter

--- a/assets/less/new/animations.less
+++ b/assets/less/new/animations.less
@@ -42,6 +42,17 @@
   }
 }
 
+@keyframes sweep-no-margin {
+  0% {
+    opacity: 0;
+    margin-top: -1rem;
+  }
+  100% {
+    opacity: 1;
+    margin-top: 0;
+  }
+}
+
 @keyframes float-around {
   0% {
     transform: translate(0, -4px);
