--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -26,6 +26,7 @@
           {# <li><a href="{{ url('blog') }}" class="dotted">{{_('Podcasts')}}</a></li> #}
           <li><a href="{{ url('thunderbird.latest.all') }}" class="dotted">{{_('Downloads')}}</a></li>
           <li><a href="{{ url('thunderbird.releases.index') }}" class="dotted">{{_('Release Notes')}}</a></li>
+          <li><a href="{{ url('thunderbird.enterprise') }}" class="dotted">{{ _('For Enterprises') }}</a></li>
           <li><a href="{{ url('thunderbird.calendar.holiday') }}" class="dotted">{{ _('Holiday Calendars') }}</a></li>
         </ul>
       </div>
