--- a/media/css/l10n/ja/intl.css
+++ b/media/css/l10n/ja/intl.css
@@ -90,6 +90,13 @@
        local('IPA P Gothic');
 }
 
+.page-index #masthead, header {
+    --bg-hero: url('/media/img/l10n/ja/thunderbird/base/home/banner-high-res.png');
+    --bg-hero-set: image-set(url('/media/img/l10n/ja/thunderbird/base/home/banner-high-res.avif') type('image/avif'),
+    url('/media/img/l10n/ja/thunderbird/base/home/banner-high-res.webp') type('image/webp'),
+    var(--bg-hero) type('image/png'));
+}
+
 /* Bug 973171 */
 
 * {
