Add atom feed to releases page

--- a/assets/less/pages/releases.less
+++ b/assets/less/pages/releases.less
@@ -27,4 +27,20 @@
     gap: 0.5rem;
     flex-wrap: wrap;
   }
+
+  .two-columns {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    margin: auto;
+    justify-content: center;
+    text-align: left;
+  }
+
+  .atom-feed {
+    display: flex;
+    width: 4rem;
+    text-align: right;
+    align-items: center;
+  }
 }
