--- a/assets/less/new/variables.less
+++ b/assets/less/new/variables.less
@@ -1,7 +1,7 @@
 :root {
   --bg: white;
   --txt: var(--color-ink-80);
-  --accent: var(--color-blue-60);
+  --accent: var(--color-link);
   --glow: var(--color-purple-70);
   --separator-color: var(--color-gray-20);
   --nav-bg: transparent;
@@ -25,7 +25,7 @@
 
   outline: 1px dotted ButtonText;
 
-  --focus-outline-color: var(--color-blue-50);
+  --focus-outline-color: var(--color-link);
   --focus-outline-offset: 2px;
   --focus-outline: 2px solid var(--focus-outline-color);
 }
