--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -31,4 +31,7 @@
 @import "./pages/newsletter.less";
 @import "./pages/donations-help.less";
 @import "./pages/holiday.less";
+
+// Appeal Page imports - These should be split off into their own bundles at some point
 @import "./pages/survey.less";
+@import "./pages/beta-appeal-24.less";
