--- a/assets/less/pages/beta-appeal-24.less
+++ b/assets/less/pages/beta-appeal-24.less
@@ -5,13 +5,25 @@
     line-height: 1.875rem;
     font-weight: 400;
 
-    --nav-height: 18px;
+    --nav-height: 42.5px;
+  }
+
+  #masthead {
+    padding-bottom: 110px;
   }
 
   .tagline {
     text-wrap: balance;
     margin: auto !important;
     max-width: 56.25rem;
+  }
+
+  .container {
+    gap: 20px;
+  }
+
+  .btn {
+    font-weight: 700;
   }
 
   .appeal-footer-container {
