--- a/assets/less/pages/beta-appeal-24.less
+++ b/assets/less/pages/beta-appeal-24.less
@@ -20,6 +20,7 @@
 
   .container {
     gap: 20px;
+    padding-bottom: 6rem; // Hardcoded to help button have some space
   }
 
   .btn {
@@ -58,7 +59,7 @@
 
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 2rem;
 
       p {
         margin: auto;
