Add active and fix focus state for buttons

--- a/assets/less/new/colours.less
+++ b/assets/less/new/colours.less
@@ -123,5 +123,7 @@
   --color-white: #fff;
   --color-black: #000;
 
+  // One-off or newer design colours
   --color-link: #1E4EAE;
+  --color-button-border-active: #0B68CB;
 }
