--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -110,6 +110,7 @@ button:hover::after {
   opacity: .75;
   background-size: 500%;
 }
+
 /*
 /** HACK for Mozilla Firefox */
 @-moz-document url-prefix() {
@@ -278,6 +279,18 @@ button:hover::after {
   &::after {
     opacity: 0.75;
   }
+}
+
+.btn-black-bg:active,
+.btn-white-bg:active,
+.btn-no-bg:active {
+  background: linear-gradient(var(--btn-background-color), var(--btn-background-color)) padding-box,
+  linear-gradient(to right, var(--color-button-border-active), var(--color-button-border-active)) border-box;
+  border-color: transparent;
+  transition: all 250ms;
+
+  // Remove the focus state
+  outline: none;
 }
 
 .btn-newsletter {
