--- a/assets/less/new/colours.less
+++ b/assets/less/new/colours.less
@@ -122,4 +122,8 @@
 
   --color-white: #fff;
   --color-black: #000;
+
+  // One-off or newer design colours
+  --color-link: #1E4EAE;
+  --color-button-border-active: #0B68CB;
 }
