Fix outlines on everything

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -5,6 +5,11 @@
 .btn-download,
 [type="button"] {
   @outline();
+  // Moved from @outline
+  &:focus {
+    outline: var(--focus-outline);
+    outline-offset: var(--focus-outline-offset);
+  }
 }
 
 .btn {
