--- a/assets/less/pages/participate.less
+++ b/assets/less/pages/participate.less
@@ -23,7 +23,7 @@
     align-items: center;
     gap: 2rem;
     width: 100%;
-    margin-bottom: 200px;
+    margin-bottom: 5rem;
 
     div:first-child {
       margin-left: 5rem;
