--- a/sites/www.thunderbird.net/includes/download-button.html
+++ b/sites/www.thunderbird.net/includes/download-button.html
@@ -57,14 +57,7 @@
     {{ _('Download and languages options') }}</a>
   </div>
   {% endif %}
-  {# no JS #}
   {% if section != 'header' %}
-  <div class="nojs-download">
-    {{ alt_buttons(builds) }}
-  </div>
-  <div class="unrecognized-download os_android os_ios">
-    {{ alt_buttons(builds) }}
-  </div>
   <p class="unsupported-download p-links">
     {{ _("Your system doesn't meet the <a href=\"%(url)s\">requirements</a> to run Thunderbird.")|format(url=thunderbird_url('system-requirements', channel)) }}
   </p>
@@ -75,7 +68,7 @@
   <ul class="download-list list-none p-0 flex flex-wrap max-w-lg mb-0 {{ flex_class }}">
     {% for plat in builds %}
       <li class="os_{{ plat.os }}{% if plat.arch %} {{ plat.arch }}{% endif %}">
-        <a class="matomo-track-download download-link {{ button_class }}"
+        <a class="btn matomo-track-download download-link {{ button_class }}"
           href="{{ plat.download_link }}"
           data-donate-redirect="download-{{ channel or 'esr' }}"
           data-donate-content="post_download"
@@ -83,6 +76,7 @@
           {% if plat.download_link_direct %}
             data-direct-link="{{ plat.download_link_direct }}"
           {% endif %}>
+          <span class="nice-name">
           {% if alt_copy %}
             {{ alt_copy }}
           {% else %}
@@ -94,6 +88,10 @@
               {{ _('Download Thunderbird') }}
             {% endif %}
           {% endif %}
+          </span>
+          <span class="full-platform-name">
+            {{ plat.os_arch_pretty or plat.os_pretty }}
+          </span>
         </a>
       </li>
     {% endfor %}
