--- a/assets/less/new/variables.less
+++ b/assets/less/new/variables.less
@@ -5,7 +5,7 @@
   --glow: var(--color-purple-70);
   --separator-color: var(--color-gray-20);
   --nav-bg: transparent;
-  --nav-txt: white;
+  --nav-txt: var(--txt);
   --nav-height: 5rem; // 80px
 
   --offset-x: 0;
