--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -1,4 +1,5 @@
 .page-index {
+
   #masthead,
   header {
     --bg-hero-gradient: linear-gradient(to top, var(--color-ink-90), black 80%);
@@ -59,12 +60,7 @@
   }
 
   .site-nav {
-    color: var(--nav-txt);
-
-    --hamburger-background-inactive: var(--color-black);
-    --hamburger-foreground-inactive: var(--color-gray-30);
-    --hamburger-background-active: var(--color-white);
-    --hamburger-foreground-active: var(--color-black);
+    --nav-txt: var(--color-white);
   }
 
 
